Addressed the comments.
Signed-off-by: Harsh Sawarkar <harshsawarkar111@gmail.com>

--- a/apps/http-api-app/src/main/resources/http_api_app.conf
+++ b/apps/http-api-app/src/main/resources/http_api_app.conf
@@ -249,6 +249,9 @@ application {
                 extendedI2pLogging = false
                 sendMessageThrottleTime = 200
                 receiveMessageThrottleTime = 200
+                proxyList = [
+                 { host = "213.210.36.244", port = 4444 }
+                ]
             }
         }
     }
