Updated config strictly for I2P testing purposes
Signed-off-by: Harsh Sawarkar <harshsawarkar111@gmail.com>

--- a/apps/seed-node-app/src/main/resources/seed_node.conf
+++ b/apps/seed-node-app/src/main/resources/seed_node.conf
@@ -128,7 +128,7 @@ application {
     network {
         version = 1
 
-        supportedTransportTypes = ["I2P", "TOR"]
+        supportedTransportTypes = ["I2P"]
         features = ["INVENTORY_HASH_SET","AUTHORIZATION_HASH_CASH","AUTHORIZATION_HASH_CASH_V2"]
 
         serviceNode {
